fix(ui): adjust input flex-grow to resolve layout issue

--- a/src/app/assets/css/global.css
+++ b/src/app/assets/css/global.css
@@ -1,3 +1,3 @@
-:root {
-  --sample-color: #fff;
+.input > input {
+  flex-grow: 1; /* fix issue https://github.com/pplancq/shelter-ui/issues/667 */
 }
